--- a/vanilla_model_cleaned.ipynb
+++ b/vanilla_model_cleaned.ipynb
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:07:53.982332Z",
-     "start_time": "2021-03-11T07:07:53.974402Z"
+     "end_time": "2021-03-11T07:21:29.944665Z",
+     "start_time": "2021-03-11T07:21:29.940341Z"
     }
    },
    "outputs": [],
@@ -40,11 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-22T15:56:17.208869Z",
-     "start_time": "2021-01-22T15:56:17.188714Z"
+     "end_time": "2021-03-11T07:21:30.269110Z",
+     "start_time": "2021-03-11T07:21:30.264884Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Importing all functions used in this notebook\n",
+    "from functions import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T07:21:33.040395Z",
+     "start_time": "2021-03-11T07:21:33.033039Z"
     }
    },
    "outputs": [],
@@ -85,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:09:12.729779Z",
-     "start_time": "2021-03-11T07:09:11.426911Z"
+     "end_time": "2021-03-11T07:21:33.316174Z",
+     "start_time": "2021-03-11T07:21:33.298293Z"
     }
    },
    "outputs": [
@@ -97,7 +112,7 @@
      "data": {
       "application/javascript": [
        "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import pandas as pd'); }\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('from sklearn.linear_model import LogisticRegression\\nimport numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split'); }\n",
        "    "
       ],
       "text/plain": [
@@ -122,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:09:36.056155Z",
-     "start_time": "2021-03-11T07:09:36.012428Z"
+     "end_time": "2021-03-11T07:21:33.785352Z",
+     "start_time": "2021-03-11T07:21:33.779199Z"
     }
    },
    "outputs": [
@@ -134,7 +149,7 @@
      "data": {
       "application/javascript": [
        "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport pandas as pd'); }\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('from sklearn.linear_model import LogisticRegression\\nimport numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split'); }\n",
        "    "
       ],
       "text/plain": [
@@ -168,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:09:44.469492Z",
-     "start_time": "2021-03-11T07:09:44.415229Z"
+     "end_time": "2021-03-11T07:21:34.850153Z",
+     "start_time": "2021-03-11T07:21:34.835384Z"
     }
    },
    "outputs": [
@@ -180,7 +195,7 @@
      "data": {
       "application/javascript": [
        "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split'); }\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('from sklearn.linear_model import LogisticRegression\\nimport numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split'); }\n",
        "    "
       ],
       "text/plain": [
@@ -202,11 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:09:46.873283Z",
-     "start_time": "2021-03-11T07:09:46.864420Z"
+     "end_time": "2021-03-11T07:21:35.605914Z",
+     "start_time": "2021-03-11T07:21:35.600826Z"
     }
    },
    "outputs": [
@@ -254,23 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:09:55.178467Z",
-     "start_time": "2021-03-11T07:09:53.341297Z"
+     "end_time": "2021-03-11T07:21:37.481531Z",
+     "start_time": "2021-03-11T07:21:37.478870Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/sklearn/utils/deprecation.py:143: FutureWarning: The sklearn.utils.testing module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.utils. Anything that cannot be imported from sklearn.utils is now part of the private API.\n",
-      "  warnings.warn(message, FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import lazypredict\n",
     "from lazypredict.Supervised import LazyClassifier"
@@ -278,11 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-22T15:58:08.020904Z",
-     "start_time": "2021-01-22T15:58:04.312114Z"
+     "end_time": "2021-03-11T07:17:31.306804Z",
+     "start_time": "2021-03-11T07:17:25.832338Z"
     }
    },
    "outputs": [
@@ -290,7 +296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:03<00:00,  8.19it/s]\n"
+      "100%|██████████| 30/30 [00:05<00:00,  5.55it/s]\n"
      ]
     },
     {
@@ -336,7 +342,7 @@
        "      <td>0.93</td>\n",
        "      <td>0.93</td>\n",
        "      <td>0.96</td>\n",
-       "      <td>0.92</td>\n",
+       "      <td>1.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DecisionTreeClassifier</th>\n",
@@ -344,7 +350,7 @@
        "      <td>0.90</td>\n",
        "      <td>0.90</td>\n",
        "      <td>0.93</td>\n",
-       "      <td>0.03</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BaggingClassifier</th>\n",
@@ -352,7 +358,7 @@
        "      <td>0.90</td>\n",
        "      <td>0.90</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.11</td>\n",
+       "      <td>0.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomForestClassifier</th>\n",
@@ -360,7 +366,7 @@
        "      <td>0.90</td>\n",
        "      <td>0.90</td>\n",
        "      <td>0.95</td>\n",
-       "      <td>0.38</td>\n",
+       "      <td>0.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AdaBoostClassifier</th>\n",
@@ -368,7 +374,7 @@
        "      <td>0.90</td>\n",
        "      <td>0.90</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.24</td>\n",
+       "      <td>0.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ExtraTreesClassifier</th>\n",
@@ -376,7 +382,7 @@
        "      <td>0.89</td>\n",
        "      <td>0.89</td>\n",
        "      <td>0.95</td>\n",
-       "      <td>0.24</td>\n",
+       "      <td>0.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVC</th>\n",
@@ -392,7 +398,7 @@
        "      <td>0.88</td>\n",
        "      <td>0.88</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.07</td>\n",
+       "      <td>0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LabelPropagation</th>\n",
@@ -400,7 +406,7 @@
        "      <td>0.88</td>\n",
        "      <td>0.88</td>\n",
        "      <td>0.93</td>\n",
-       "      <td>0.13</td>\n",
+       "      <td>0.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LabelSpreading</th>\n",
@@ -408,7 +414,7 @@
        "      <td>0.88</td>\n",
        "      <td>0.88</td>\n",
        "      <td>0.93</td>\n",
-       "      <td>0.18</td>\n",
+       "      <td>0.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LogisticRegression</th>\n",
@@ -416,7 +422,7 @@
        "      <td>0.87</td>\n",
        "      <td>0.87</td>\n",
        "      <td>0.92</td>\n",
-       "      <td>0.05</td>\n",
+       "      <td>0.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LinearSVC</th>\n",
@@ -424,7 +430,7 @@
        "      <td>0.87</td>\n",
        "      <td>0.87</td>\n",
        "      <td>0.91</td>\n",
-       "      <td>0.10</td>\n",
+       "      <td>0.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CalibratedClassifierCV</th>\n",
@@ -432,7 +438,7 @@
        "      <td>0.87</td>\n",
        "      <td>0.87</td>\n",
        "      <td>0.91</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>0.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NearestCentroid</th>\n",
@@ -464,7 +470,7 @@
        "      <td>0.85</td>\n",
        "      <td>0.85</td>\n",
        "      <td>0.88</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LinearDiscriminantAnalysis</th>\n",
@@ -472,7 +478,7 @@
        "      <td>0.83</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.89</td>\n",
-       "      <td>0.50</td>\n",
+       "      <td>0.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RidgeClassifier</th>\n",
@@ -480,7 +486,7 @@
        "      <td>0.83</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RidgeClassifierCV</th>\n",
@@ -488,7 +494,7 @@
        "      <td>0.83</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.03</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GaussianNB</th>\n",
@@ -496,7 +502,7 @@
        "      <td>0.81</td>\n",
        "      <td>0.81</td>\n",
        "      <td>0.88</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PassiveAggressiveClassifier</th>\n",
@@ -504,7 +510,7 @@
        "      <td>0.80</td>\n",
        "      <td>0.80</td>\n",
        "      <td>0.86</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BernoulliNB</th>\n",
@@ -520,7 +526,7 @@
        "      <td>0.78</td>\n",
        "      <td>0.78</td>\n",
        "      <td>0.86</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DummyClassifier</th>\n",
@@ -528,7 +534,7 @@
        "      <td>0.51</td>\n",
        "      <td>0.51</td>\n",
        "      <td>0.65</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CheckingClassifier</th>\n",
@@ -536,7 +542,7 @@
        "      <td>0.50</td>\n",
        "      <td>0.50</td>\n",
        "      <td>0.67</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -574,35 +580,35 @@
        "\n",
        "                               Time Taken  \n",
        "Model                                      \n",
-       "LGBMClassifier                       0.92  \n",
-       "DecisionTreeClassifier               0.03  \n",
-       "BaggingClassifier                    0.11  \n",
-       "RandomForestClassifier               0.38  \n",
-       "AdaBoostClassifier                   0.24  \n",
-       "ExtraTreesClassifier                 0.24  \n",
+       "LGBMClassifier                       1.68  \n",
+       "DecisionTreeClassifier               0.04  \n",
+       "BaggingClassifier                    0.14  \n",
+       "RandomForestClassifier               0.53  \n",
+       "AdaBoostClassifier                   0.45  \n",
+       "ExtraTreesClassifier                 0.28  \n",
        "SVC                                  0.10  \n",
-       "KNeighborsClassifier                 0.07  \n",
-       "LabelPropagation                     0.13  \n",
-       "LabelSpreading                       0.18  \n",
-       "LogisticRegression                   0.05  \n",
-       "LinearSVC                            0.10  \n",
-       "CalibratedClassifierCV               0.25  \n",
+       "KNeighborsClassifier                 0.08  \n",
+       "LabelPropagation                     0.16  \n",
+       "LabelSpreading                       0.26  \n",
+       "LogisticRegression                   0.10  \n",
+       "LinearSVC                            0.12  \n",
+       "CalibratedClassifierCV               0.32  \n",
        "NearestCentroid                      0.03  \n",
        "ExtraTreeClassifier                  0.02  \n",
        "SGDClassifier                        0.04  \n",
-       "Perceptron                           0.02  \n",
-       "LinearDiscriminantAnalysis           0.50  \n",
-       "RidgeClassifier                      0.04  \n",
-       "RidgeClassifierCV                    0.03  \n",
-       "GaussianNB                           0.02  \n",
-       "PassiveAggressiveClassifier          0.02  \n",
+       "Perceptron                           0.04  \n",
+       "LinearDiscriminantAnalysis           0.62  \n",
+       "RidgeClassifier                      0.05  \n",
+       "RidgeClassifierCV                    0.04  \n",
+       "GaussianNB                           0.03  \n",
+       "PassiveAggressiveClassifier          0.04  \n",
        "BernoulliNB                          0.03  \n",
-       "QuadraticDiscriminantAnalysis        0.02  \n",
-       "DummyClassifier                      0.02  \n",
-       "CheckingClassifier                   0.02  "
+       "QuadraticDiscriminantAnalysis        0.04  \n",
+       "DummyClassifier                      0.03  \n",
+       "CheckingClassifier                   0.04  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,24 +662,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T07:21:41.938108Z",
+     "start_time": "2021-03-11T07:21:41.839365Z"
+    },
     "scrolled": false
    },
    "outputs": [
     {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('from sklearn.linear_model import LogisticRegression\\nimport numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation Metrics:\n",
-      "Accuracy: 0.8834586466165414\n",
-      "Recall: 0.9535452322738386\n",
-      "F1 Score: 0.9263657957244655\n",
-      "Precision: 0.9006928406466512\n",
-      "\n",
-      "Confusion Matrix:\n",
-      " TN,  FP, FN, TP\n",
-      "[390  19  43  80]\n"
+      "Evaluation Metrics:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'metrics' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-f66a56dadd42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Evaluation Metrics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mevaluation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_lr_baseline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/ismael/Desktop/data_science/Projects/mod-3-improved/Predicting-Fetal-Risk-Using-Cardiotocographic-Data/functions.py\u001b[0m in \u001b[0;36mevaluation\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Print Accuracy, Recall, F1 Score, and Precision metrics.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Evaluation Metrics:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Accuracy: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Recall: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecall_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'F1 Score: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf1_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'metrics' is not defined"
      ]
     }
    ],
