--- a/vanilla_model_cleaned.ipynb
+++ b/vanilla_model_cleaned.ipynb
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:21:29.944665Z",
-     "start_time": "2021-03-11T07:21:29.940341Z"
+     "end_time": "2021-03-11T07:29:01.289581Z",
+     "start_time": "2021-03-11T07:29:01.285627Z"
     }
    },
    "outputs": [],
@@ -35,16 +35,18 @@
     "import pyforest\n",
     "from sklearn import metrics\n",
     "from sklearn.metrics import mean_squared_error, precision_score\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score                      "
+    "from sklearn.metrics import confusion_matrix, accuracy_score  \n",
+    "import lazypredict \n",
+    "from lazypredict.Supervised import LazyClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:21:30.269110Z",
-     "start_time": "2021-03-11T07:21:30.264884Z"
+     "end_time": "2021-03-11T07:25:04.051606Z",
+     "start_time": "2021-03-11T07:25:04.048519Z"
     }
    },
    "outputs": [],
@@ -261,6 +263,7 @@
     "To better understand our dataset and how our features variables affect our target variable, we decided to run baseline models and find what approach we should take when tuning our models. None of the baseline models will have any kinds of hyperparameters tuning. We will use the default hyperparameters.\n",
     "\n",
     "<b>Objectives:</b>\n",
+    "- Run lazypredict and to have an overview of how the dataset would perform\n",
     "- Run a Logistic Regression, KNN, Decision Tree, and Random Forest model.\n",
     "- Create a function to simplify our model evaluation.\n",
     "- Evaluate each model using the Accuracy, Recall, F1 Score, and Precision metrics.\n",
@@ -621,8 +624,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T07:25:30.584292Z",
+     "start_time": "2021-03-11T07:25:30.570552Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Evaluation function\n",
@@ -662,11 +670,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:21:41.938108Z",
-     "start_time": "2021-03-11T07:21:41.839365Z"
+     "end_time": "2021-03-11T07:25:32.239880Z",
+     "start_time": "2021-03-11T07:25:32.117238Z"
     },
     "scrolled": false
    },
@@ -689,19 +697,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation Metrics:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'metrics' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-f66a56dadd42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Evaluation Metrics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mevaluation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_lr_baseline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/ismael/Desktop/data_science/Projects/mod-3-improved/Predicting-Fetal-Risk-Using-Cardiotocographic-Data/functions.py\u001b[0m in \u001b[0;36mevaluation\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Print Accuracy, Recall, F1 Score, and Precision metrics.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Evaluation Metrics:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Accuracy: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Recall: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecall_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'F1 Score: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf1_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'metrics' is not defined"
+      "Evaluation Metrics:\n",
+      "Accuracy: 0.8778195488721805\n",
+      "Recall: 0.9511002444987775\n",
+      "F1 Score: 0.9228944246737841\n",
+      "Precision: 0.8963133640552995\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " TN,  FP, FN, TP\n",
+      "[389  20  45  78]\n"
      ]
     }
    ],
@@ -1048,24 +1052,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T07:25:08.944247Z",
+     "start_time": "2021-03-11T07:25:08.925861Z"
+    },
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluation Metrics:\n",
-      "Accuracy: 0.8383458646616542\n",
-      "Recall: 0.8410757946210269\n",
-      "F1 Score: 0.8888888888888888\n",
-      "Precision: 0.9424657534246575\n",
-      "\n",
-      "Confusion Matrix:\n",
-      " TN,  FP, FN, TP\n",
-      "[344  65  21 102]\n"
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('from sklearn.linear_model import LogisticRegression\\nimport numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train_smote' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-f28f2787b0e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Fitting and predicting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mlr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_smote\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_smote\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0my_pred_lr_tuned\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train_smote' is not defined"
      ]
     }
    ],
